--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@
 }
 
 :root {
-  --verde: #45936b; /* confirma */
+  --verde: rgb(66, 195, 115); /* confirma */
   --vermelho: #ed562d; /* cancelar */
   --branco: #fff; /* votar em branco */
   --botao-fundo: #363533;
@@ -23,7 +23,7 @@
   height: 100vh;
 }
 
-.login-dados {
+.janela {
   border: 2px solid var(--botao-fundo);
   width: 30%;
   height: 40%;
@@ -59,4 +59,100 @@ input {
 .entrar:hover {
   background-color: #386e52;
   transition: 300ms;
+}
+
+/* HUB */
+
+.Hub_main {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 100vh;
+}
+
+.button_hub {
+  width: 50%;
+  background-color: var(--verde);
+  margin-top: 15px;
+  padding: 10px;
+  border-radius: var(--border-card);
+  text-transform: uppercase;
+  font-weight: bold;
+  border: 1px solid var(--botao-fundo);
+  cursor: pointer;
+  text-decoration: none;
+  text-align: center;
+  color: black;
+  text-decoration: none;
+}
+
+.button_hub:hover {
+  background-color: #386e52;
+  transition: 300ms;
+}
+
+.sair_button {
+  width: 15%;
+  background-color: var(--vermelho);
+  padding: 7px;
+  border-radius: var(--border-card);
+  text-transform: uppercase;
+  font-weight: bold;
+  border: 1px solid var(--botao-fundo);
+  cursor: pointer;
+  position: fixed;
+  bottom: 3px; 
+  right: 3px; 
+  margin-right: 3px; 
+  margin-bottom: 3px; 
+  text-decoration: none;
+  text-align: center;
+  color: black;
+}
+
+.sair_button:hover {
+  background-color: #9b3b20;
+  transition: 300ms;
+}
+
+/* id_eleitor */
+
+.Entrar_button {
+  width: 25%;
+  background-color: var(--verde);
+  margin-top: 15px;
+  padding: 10px 2px; 
+  border-radius: var(--border-card);
+  text-transform: uppercase;
+  font-weight: bold;
+  border: 1px solid var(--botao-fundo);
+  cursor: pointer;
+  text-decoration: none;
+  text-align: center;
+  color: black;
+  position: absolute;
+  bottom: 0;
+  right: 10px; 
+}
+
+.janela_id {
+  position: relative;
+  border: 2px solid var(--botao-fundo);
+  width: 30%;
+  height: 40%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  border-radius: var(--border-card);
+  background-color: var(--bg);
+}
+
+.voltar_button {
+  position: fixed;
+  bottom: -90px; 
+  right: -180px; 
+  height: auto; 
+  transform: scale(0.3);
+  cursor: pointer;
 }
