--- a/style.css
+++ b/style.css
@@ -142,3 +142,79 @@ li {
   margin: 10px;
   text-align: center;
 }
+
+/* tela de voto */
+#n_chap::placeholder {
+  text-align: center;
+}
+
+.botao_branco {
+  text-align: center;
+  width: 50%;
+  background-color: #fff;
+  margin-top: 15px;
+  padding: 10px;
+  border-radius: var(--border-card);
+  text-transform: uppercase;
+  font-weight: bold;
+  border: 1px solid var(--botao-fundo);
+  cursor: pointer;
+  
+}
+
+.botao_branco:focus {
+  
+  background-color: #dddddd;
+  transition: 300ms;
+  text-decoration: underline;
+  color: rgb(17, 46, 13);
+  border-width: 2px;
+
+}
+
+/* tela de confirmação */
+.janela_confirma  {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  border: 2px solid var(--botao-fundo);
+  width: 30%;
+  height: 40%;
+  border-radius: var(--border-card);
+  background-color: var(--bg);
+}
+
+.botao_confirma,
+.botao_cancela {
+  width: calc(50% - 5px); 
+  margin-top: 15px;
+  padding: 10px;
+  border-radius: var(--border-card);
+  text-transform: uppercase;
+  font-weight: bold;
+  border: 1px solid var(--botao-fundo);
+  cursor: pointer;
+}
+
+.botao_confirma {
+  background-color: var(--verde);
+}
+
+.botao_confirma {
+  margin-right: 5px;
+}
+
+.botao_confirma:focus {
+  background-color: #386e52;
+  transition: 300ms;
+}
+
+.botao_cancela {
+  background-color: var(--vermelho);
+}
+
+.botao_cancela:focus {
+  background-color: #9b3b20;
+  transition: 300ms;
+}
