--- a/Hub mesário/style.css
+++ b/Hub mesário/style.css
@@ -101,7 +101,7 @@ input {
 }
 
 .voltar_button {
-  position: fixed;
+  position: relative;
   top: 54%;
   left: 46%;
   height: auto;
@@ -141,4 +141,115 @@ li {
   list-style: none;
   margin: 10px;
   text-align: center;
+}
+
+/* tela de voto */
+#n_chap::placeholder {
+  text-align: center;
+}
+
+.botao_branco {
+  text-align: center;
+  width: 50%;
+  background-color: #fff;
+  margin-top: 15px;
+  padding: 10px;
+  border-radius: var(--border-card);
+  text-transform: uppercase;
+  font-weight: bold;
+  border: 1px solid var(--botao-fundo);
+  cursor: pointer;
+  
+}
+
+.botao_branco:focus {
+  
+  background-color: #dddddd;
+  transition: 300ms;
+  text-decoration: underline;
+  color: rgb(17, 46, 13);
+  border-width: 2px;
+
+}
+
+/* tela de confirmação */
+.janela_confirma  {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  border: 2px solid var(--botao-fundo);
+  width: 30%;
+  height: 40%;
+  border-radius: var(--border-card);
+  background-color: var(--bg);
+}
+
+.botao_confirma,
+.botao_cancela {
+  width: calc(50% - 5px); 
+  margin-top: 15px;
+  padding: 10px;
+  border-radius: var(--border-card);
+  text-transform: uppercase;
+  font-weight: bold;
+  border: 1px solid var(--botao-fundo);
+  cursor: pointer;
+}
+
+.botao_confirma {
+  background-color: var(--verde);
+}
+
+.botao_confirma {
+  margin-right: 5px;
+}
+
+.botao_confirma:focus {
+  background-color: #386e52;
+  transition: 300ms;
+}
+
+.botao_cancela {
+  background-color: var(--vermelho);
+}
+
+.botao_cancela:focus {
+  background-color: #9b3b20;
+  transition: 300ms;
+}
+
+/* Cadastro de Chapas */
+
+.imagemPreview {
+  max-width: 300px; 
+  max-height: 300px; 
+  margin-top: 10px;
+  display: block; 
+}
+
+.container_chap{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 100vh;
+}
+
+.janela_chap {
+  background-color: var(--bg);
+  padding: 20px;
+  border-radius: 10px;
+  box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
+  transition: height 0.3s ease; /* Transição suave ao expandir */
+  overflow-y: auto; /* Adiciona uma barra de rolagem vertical se necessário */
+  max-height: 60vh; /* Altura máxima da janela */
+  width: 80%;
+  margin-bottom: 20px; /* Espaço entre a janela e os botões */
+}
+
+.imagemPreview {
+  max-width: 300px;
+  max-height: 300px;
+  margin-top: 10px;
+  display: block; /* Para garantir que a imagem não cause quebra de linha */
 }
